# pcm_inversion

./: .gitignore  CMakeLists.txt  Makefile  MyCollection.bib  PCM inversion.tex  README.md  determinant.cpp  eigen_test.cpp  lap.cpp  lapack.cpp  main.cpp  market_share_python_bindings_example.py  matrix_inverse.cpp  matrix_inverse.h  pcm_market_share.cpp  pcm_market_share.h  pcm_market_share.hpp  pcm_market_share_knitro.cpp  pcm_market_share_knitro.h  test_omp.cpp  test_pcm.cpp
examples/: CMakeLists.txt  grid_generator.hpp  test_pcm.cpp
inversion_algorithm/: CMakeLists.txt  inversion_test.cpp  market_inversion.cpp  market_inversion.hpp
latex_article/: CMakeLists.txt  MyCollection.bib  PCM inversion.tex  build_article.sh
market_share/: CMakeLists.txt  market_share_test.cpp  pcm_market_share.cpp  pcm_market_share.hpp
python_bindings/: CMakeLists.txt  Readme-python-bindings.md  market_inversion_python.cpp  market_share_python.cpp  market_share_python_bindings_example.py  pcm_inversion_algorithm.py  pcm_market_share.py
